하나의 아이템 들고 주문페이지 이동

--- a/src/main/resources/templates/Item/itemBuy.html
+++ b/src/main/resources/templates/Item/itemBuy.html
@@ -161,7 +161,7 @@
     <!--최종 결제 끝-->
 
     <div class="my-20 box-border text-center">
-        <a href="buy" class="cursor-pointer bg-black text-white px-10 py-3 text-xl box-border">주문하기</a>
+        <a href="/order" class="cursor-pointer bg-black text-white px-10 py-3 text-xl box-border">주문하기</a>
     </div>
 
 </div>
