--- a/src/main/resources/templates/Item/item_detail.html
+++ b/src/main/resources/templates/Item/item_detail.html
@@ -22,7 +22,7 @@
     <div class="heading-section">
     </div>
     <div th:each="item : ${items}">
-      <form method="post" th:action="@{/shopping/itemsBuy}">
+      <form method="post" th:action="@{/shopping/buy}">
 <!--        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
         <div class="row">
           <div class="col-md-6">
@@ -58,7 +58,7 @@
                   <div class="qtyminus">-</div>
                   <input type="text" name="quantity" value="1" class="qty">
                   <div class="qtyplus">+</div>
-                </div>즈
+                </div>
               </div>
               <button type="submit" class="round-black-btn">구매하기</button>
               <a th:href="@{/shopping/cartAdd(itemId=${item.iseq}, quantity=1)}" class="round-black-btn">장바구니에 넣기</a>
