--- a/src/main/resources/templates/my/addressAdd.html
+++ b/src/main/resources/templates/my/addressAdd.html
@@ -50,7 +50,7 @@
               <input type="text" id="detailAddress" th:field="*{address.street}" required />
           </div>
           <div class="form-group col-6">
-              <label for="name">참고 항목</label>
+              <label for="name">(참고)</label>
               <input type="text" id="extraAddress" required />
           </div>
       </div>
