--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -30,6 +30,9 @@
     <!-- responsive style -->
     <link href="/css/responsive.css" rel="stylesheet" />
 
+    <!-- 토글 스위치 사용할 때 필요 -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+
   </head>
 </th:block>
 </html>
