--- a/src/main/resources/static/css/orderDetail.css
+++ b/src/main/resources/static/css/orderDetail.css
@@ -1,8 +1,3 @@
-
-html > body {
-    text-underline-position: under;
-}
-
 /* 노말라이즈 */
 body, ul, li {
     margin:0;
@@ -25,11 +20,13 @@ a {
     background-color: black;
 }
 input[type=number] {
-    width: 40px;
+    max-width: 60px;
+    min-width: 40px; /* 입력 필드의 최소 너비 */
 }
 
 dd.myTitle {
     text-align: center;
+    pointer-events: none;
 }
 
 .orderInfo {
