--- a/src/main/resources/templates/Item/itemBuy.html
+++ b/src/main/resources/templates/Item/itemBuy.html
@@ -41,9 +41,9 @@
                 </dl>
             </div>
 
-            <div class="px-5 py-4 text-right border-b-2 border-black text-gray-400">상품<span class="text-black"> 39,500</span>원 + 배송<span class="text-black"> 0</span>원<span class="pl-3 box-border text-black">주문금액 39,500원</span></div>
+            <div class="px-5 py-4 text-right border-b-2 border-black text-gray-400">상품 <span class="text-black total-price"> 39,500</span> + 배송<span class="text-black"> 0원 </span></div>
 
-            <div class="text-2xl text-right p-5 box-border">총 결제금액 <span class="text-yellow-400">39,500</span><span>원</span></div>
+            <div class="text-2xl text-right p-5 box-border">총 결제금액 <span class="text-yellow-400 total-price">39,500</span><span></span></div>
         </div>
     </div>
     <!-- 주문상품 정보 끝 -->
@@ -118,6 +118,7 @@
                 <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">배송주소</dt>
                 <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
                     <input class="w-1/3 px-4 py-3 border-2 mx-1 mb-1" type="text" id="sample6_postcode" placeholder="우편번호" readonly>
+                    <input type="button" onclick="execDaumPostcode()" class="border-2 findZipcode" value="우편번호 찾기" />
                     <input class="w-full px-4 py-3 mx-1 border-2 mb-1" type="text" id="sample6_address" placeholder="주소" readonly>
                     <input class="w-1/3 px-4 py-3 mx-1 border-2" type="text" id="sample6_extraAddress" placeholder="동" readonly>
                     <input class="w-1/3 px-4 py-3 mx-1 border-2" type="text" id="sample6_detailAddress" placeholder="상세주소">
@@ -147,11 +148,11 @@
         <div class="mb-10 table w-full border-b border-black">
             <dl class="px-2 overflow-hidden mb-15">
                 <dt class="font-bold float-left w-1/2 px-2 py-3">총 상품금액</dt>
-                <dd class="float-left text-right w-1/2 px-2 py-3">39,500원</dd>
+                <dd class="float-left text-right w-1/2 px-2 py-3 total-price">39,500원</dd>
                 <dt class="font-bold float-left w-1/2 px-2 py-3">배송비</dt>
                 <dd class="float-left text-right w-1/2 px-2 py-3">0원</dd>
                 <dt class="text-3xl font-bold float-left w-1/2 px-2 py-3">총 결제예상 금액</dt>
-                <dd class="text-3xl font-bold text-yellow-400 float-left text-right w-1/2 px-2 py-3">39,500원</dd>
+                <dd class="text-3xl font-bold text-yellow-400 float-left text-right w-1/2 px-2 py-3 total-price">39,500원</dd>
             </dl>
         </div>
     </div>
@@ -167,55 +168,8 @@
 <div th:replace="fragments/footer :: footerFragment"></div>
 <!-- footer section -->
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-<script>
-    function sample6_execDaumPostcode() {
-        new daum.Postcode({
-            oncomplete: function(data) {
-                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
-
-                // 각 주소의 노출 규칙에 따라 주소를 조합한다.
-                // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
-                var addr = ''; // 주소 변수
-                var extraAddr = ''; // 참고항목 변수
-
-                //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
-                if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
-                    addr = data.roadAddress;
-                } else { // 사용자가 지번 주소를 선택했을 경우(J)
-                    addr = data.jibunAddress;
-                }
-
-                // 사용자가 선택한 주소가 도로명 타입일때 참고항목을 조합한다.
-                if(data.userSelectedType === 'R'){
-                    // 법정동명이 있을 경우 추가한다. (법정리는 제외)
-                    // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
-                    if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
-                        extraAddr += data.bname;
-                    }
-                    // 건물명이 있고, 공동주택일 경우 추가한다.
-                    if(data.buildingName !== '' && data.apartment === 'Y'){
-                        extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
-                    }
-                    // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
-                    if(extraAddr !== ''){
-                        extraAddr = ' (' + extraAddr + ')';
-                    }
-                    // 조합된 참고항목을 해당 필드에 넣는다.
-                    document.getElementById("sample6_extraAddress").value = extraAddr;
-
-                } else {
-                    document.getElementById("sample6_extraAddress").value = '';
-                }
-
-                // 우편번호와 주소 정보를 해당 필드에 넣는다.
-                document.getElementById('sample6_postcode').value = data.zonecode;
-                document.getElementById("sample6_address").value = addr;
-                // 커서를 상세주소 필드로 이동한다.
-                document.getElementById("sample6_detailAddress").focus();
-            }
-        }).open();
-    }
-</script>
+<script src="/js/address.js"></script>
+<script src="/js/itemBuy.js"></script>
 </body>
 
 </html>
