--- a/src/main/resources/templates/Item/itemBuy.html
+++ b/src/main/resources/templates/Item/itemBuy.html
@@ -97,21 +97,47 @@
                     <label for="basic" class="inline-block mr-4">기본 배송지</label>
                     <input type="radio" id="new" name="address" >
                     <label for="new" class="inline-block">새로운 배송지</label>
-                    <a href="/itemAddress" class="px-3 inline-block border border-black address">나의 배송 주소록</a>
+                    <a href="#" id="addressModalToggle" class="px-3 inline-block border border-black address">나의 배송 주소록</a>
+                    <!-- 모달 -->
+                    <div id="addressModal" class="modal">
+                        <div class="modal-content">
+                            <span class="close" onclick="closeModal()">&times;</span>
+                            <h2>내 배송지 목록</h2>
+                            <table>
+                                <thead>
+                                <tr>
+                                    <th>선택</th>
+                                    <th>배송지 이름</th>
+                                    <th>주소</th>
+                                    <th>수령인</th>
+                                    <th>전화번호</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="address : ${mad}">
+                                    <td><input type="radio" name="selectAddress" onclick="getAddressDetails()" th:value="${address.maseq}"></td>
+                                    <td th:text="${address.title}">내 배송지</td>
+                                    <td th:text="${address.address.city}">서울시 강남구</td>
+                                    <td th:text="${address.address.name}">홍길동</td>
+                                    <td th:text="${address.address.phone}">010-1234-5678</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
                 </dd>
             </dl>
             <dl class="table-row">
                 <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">수령자</dt>
                 <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                    <input type="text" class="w-full border-2 mx-1 px-4 py-3 box-border">
+                    <input type="text" id="addressName" class="w-full border-2 mx-1 px-4 py-3 box-border">
                 </dd>
             </dl>
             <dl class="table-row">
                 <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">휴대폰</dt>
                 <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                    <input type="text" class="w-1/4 border-2 mx-1 px-4 py-3 box-border" maxlength = '3'> -
-                    <input type="text" class="w-1/4 border-2 mx-1 px-4 py-3 box-border" maxlength = '4'> -
-                    <input type="text" class="w-1/4 border-2 mx-1 px-4 py-3 box-border" maxlength = '4'>
+                    <input type="text" id="addressPhone" class="w-full border-2 mx-1 px-4 py-3 box-border">
                 </dd>
             </dl>
             <dl class="table-row">
@@ -120,22 +146,7 @@
                     <input class="w-1/3 px-4 py-3 border-2 mx-1 mb-1" type="text" id="sample6_postcode" placeholder="우편번호" readonly>
                     <input type="button" onclick="execDaumPostcode()" class="border-2 findZipcode" value="우편번호 찾기" />
                     <input class="w-full px-4 py-3 mx-1 border-2 mb-1" type="text" id="sample6_address" placeholder="주소" readonly>
-                    <input class="w-1/3 px-4 py-3 mx-1 border-2" type="text" id="sample6_extraAddress" placeholder="동" readonly>
                     <input class="w-1/3 px-4 py-3 mx-1 border-2" type="text" id="sample6_detailAddress" placeholder="상세주소">
-
-
-                </dd>
-            </dl>
-            <dl class="table-row">
-                <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">배송메모</dt>
-                <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                    <select name="email" class="w-full border-2 mx-1 px-4 py-3 box-border">
-                        <option value="입력" class="text-gray-300" selected>배송 시 요청사항을 입력해주세요.</option>
-                        <option value="집" class="text-gray-300">문 앞에 놓고가 주세요.</option>
-                        <option value="경비실" class="text-gray-300">경비실에 맡겨주세요.</option>
-                        <option value="택배보관" class="text-gray-300">택배보관함에 넣어주세요.</option>
-                        <option value="직접" class="text-gray-300">직접 받겠습니다.</option>
-                    </select>
                 </dd>
             </dl>
         </div>
