--- a/src/main/resources/templates/Item/itemBuy.html
+++ b/src/main/resources/templates/Item/itemBuy.html
@@ -95,7 +95,7 @@
                 <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
                     <input type="radio" id="basic" name="address" onclick="fetchBasicAddress()">
                     <label for="basic" class="inline-block mr-4">기본 배송지</label>
-                    <input type="radio" id="new" name="address">
+                    <input type="radio" id="new" name="address" onclick="clearAddress()">
                     <label for="new" class="inline-block">새로운 배송지</label>
                     <a href="#" id="addressModalToggle" class="px-3 inline-block border border-black address">나의 배송 주소록</a>
                     <!-- 모달 -->
@@ -143,15 +143,17 @@
             <dl class="table-row">
                 <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">배송주소</dt>
                 <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                    <input class="w-1/3 px-4 py-3 border-2 mx-1 mb-1" type="text" id="sample6_postcode" placeholder="우편번호" readonly>
+                    <input class="w-1/3 px-4 py-3 border-2 mx-1 mb-1" type="text" id="zipcode" placeholder="우편번호" readonly>
                     <input type="button" onclick="execDaumPostcode()" class="border-2 findZipcode" value="우편번호 찾기" />
-                    <input class="w-full px-4 py-3 mx-1 border-2 mb-1" type="text" id="sample6_address" placeholder="주소" readonly>
-                    <input class="w-1/3 px-4 py-3 mx-1 border-2" type="text" id="sample6_detailAddress" placeholder="상세주소">
+                    <input class="w-full px-4 py-3 mx-1 border-2 mb-1" type="text" id="address" placeholder="주소" readonly>
+                    <input class="w-1/3 px-4 py-3 mx-1 border-2" type="text" id="detailAddress" placeholder="상세주소">
+                    <input class="w-1/3 px-4 py-3 mx-1 border-2" type="hidden" id="extraAddress" placeholder="참고">
                 </dd>
             </dl>
         </div>
     </div>
     <!--배송지 정보 끝-->
+
 
     <!--최종 결제 시작-->
     <div class="box-border">
