--- a/src/main/resources/templates/Item/itemBuy.html
+++ b/src/main/resources/templates/Item/itemBuy.html
@@ -18,165 +18,166 @@
 </div>
 
 <!-- 주문상품 정보 시작 -->
-<div class="container max-w-screen-lg mx-auto">
-    <div class="relative overflow-visible orderInfo">
-        <h2 class="mt-10 border-b-2 border-black text-xl">주문상품 정보</h2>
-        <div class="box-border">
-            <div class="w-full table">
-                <dl class="w-full table-row">
+<form action="/shopping/orders" method="post">
+    <div class="container max-w-screen-lg mx-auto">
+        <div class="relative overflow-visible orderInfo">
+            <h2 class="mt-10 border-b-2 border-black text-xl">주문상품 정보</h2>
+            <div class="box-border">
+                <div class="w-full table">
+                    <dl class="w-full table-row">
 
-                    <dt class="pb-4 table-cell text-center"></dt>
-                    <dt class="pb-4 table-cell text-center">상품명</dt>
-                    <dt class="pb-4 table-cell text-center">수량</dt>
-                    <dt class="pb-4 table-cell text-center">주문 금액</dt>
+                        <dt class="pb-4 table-cell text-center"></dt>
+                        <dt class="pb-4 table-cell text-center">상품명</dt>
+                        <dt class="pb-4 table-cell text-center">수량</dt>
+                        <dt class="pb-4 table-cell text-center">주문 금액</dt>
+                    </dl>
+                    <dl class="table-row overflow-visible" th:each="item : ${orderItemsForms}">
+                        <dd class="table-cell p-3 border-t border-b myTitle">
+                            <img th:with="fileName=${#strings.substringAfter(item.item.img, '_')}" th:src="@{'/images/' + ${fileName}}" class="product_img" />
+                        </dd>
+                        <dd class="table-cell p-3 align-middle border-t border-b myTitle" th:text="${item.item.name}">
+                        </dd>
+                        <dd class="table-cell p-3 align-middle border-t border-b myTitle" th:text="${item.count + ' 개'}"></dd>
+                        <dd th:text="${#numbers.formatInteger(item.item.price, 0, 'COMMA') + ' 원'}" class="table-cell p-3 align-middle border-t border-b myTitle">원</dd>
+                    </dl>
+                </div>
+
+                <div class="px-5 py-4 text-right border-b-2 border-black text-gray-400">상품 <span class="text-black total-price"> 39,500</span> + 배송<span class="text-black"> 0원 </span></div>
+
+                <div class="text-2xl text-right p-5 box-border">총 결제금액 <span class="text-yellow-400 total-price">39,500</span><span></span></div>
+            </div>
+        </div>
+        <!-- 주문상품 정보 끝 -->
+
+        <!-- 주문자 정보 시작 -->
+        <div class="box-border">
+            <h2 class="mt-10 box-border border-b-2 border-black text-xl">주문자 정보</h2>
+            <div class="mb-10 table w-full border-b border-black">
+                <dl class="table-row">
+                    <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">이름</dt>
+                    <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
+                        <input type="text" class="w-full border-2 mx-1 px-4 py-3 box-border" th:value="${member.name}">
+                    </dd>
                 </dl>
-                <dl class="table-row overflow-visible" th:each="item : ${orderItemsForms}">
-                    <dd class="table-cell p-3 border-t border-b myTitle">
-                        <img th:with="fileName=${#strings.substringAfter(item.item.img, '_')}" th:src="@{'/images/' + ${fileName}}" class="product_img" />
+                <dl class="table-row">
+                    <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">휴대폰</dt>
+                    <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
+                        <input type="text" class="w-full border-2 mx-1 px-4 py-3 box-border" th:value="${member.phone}">
+    <!--                    <input type="text" class="w-1/4 border-2 mx-1 px-4 py-3 box-border" maxlength = '3'> - -->
+    <!--                    <input type="text" class="w-1/4 border-2 mx-1 px-4 py-3 box-border" maxlength = '4'> - -->
+    <!--                    <input type="text" class="w-1/4 border-2 mx-1 px-4 py-3 box-border" maxlength = '4'>-->
                     </dd>
-                    <dd class="table-cell p-3 align-middle border-t border-b myTitle" th:text="${item.item.name}">
-                    </dd>
-                    <dd class="table-cell p-3 align-middle border-t border-b myTitle" th:text="${item.count + ' 개'}"></dd>
-                    <dd th:text="${#numbers.formatInteger(item.item.price, 0, 'COMMA') + ' 원'}" class="table-cell p-3 align-middle border-t border-b myTitle">원</dd>
+                </dl>
+                <dl class="table-row">
+                    <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">이메일</dt>
+                        <input type="email" class="w-full border-2 mx-1 px-4 py-3 box-border" th:value="${member.email}">
+
+                    <!--                <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">-->
+    <!--                    <input type="text" class="w-1/3 border-2 mx-1 px-4 py-3 box-border"> @-->
+    <!--                    <select name="email" class="w-1/3 border-2 mx-1 px-4 py-3 box-border">-->
+    <!--                        <option value="naver">naver.com</option>-->
+    <!--                        <option value="naver">daum.net</option>-->
+    <!--                        <option value="naver">hotmail.com</option>-->
+    <!--                        <option value="naver">nate.com</option>-->
+    <!--                        <option value="naver">gmail.com</option>-->
+    <!--                    </select>-->
+    <!--                </dd>-->
                 </dl>
             </div>
-
-            <div class="px-5 py-4 text-right border-b-2 border-black text-gray-400">상품 <span class="text-black total-price"> 39,500</span> + 배송<span class="text-black"> 0원 </span></div>
-
-            <div class="text-2xl text-right p-5 box-border">총 결제금액 <span class="text-yellow-400 total-price">39,500</span><span></span></div>
         </div>
-    </div>
-    <!-- 주문상품 정보 끝 -->
+        <!-- 주문자 정보 끝 -->
 
-    <!-- 주문자 정보 시작 -->
-    <div class="box-border">
-        <h2 class="mt-10 box-border border-b-2 border-black text-xl">주문자 정보</h2>
-        <div class="mb-10 table w-full border-b border-black">
-            <dl class="table-row">
-                <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">이름</dt>
-                <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                    <input type="text" class="w-full border-2 mx-1 px-4 py-3 box-border" th:value="${member.name}">
-                </dd>
-            </dl>
-            <dl class="table-row">
-                <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">휴대폰</dt>
-                <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                    <input type="text" class="w-full border-2 mx-1 px-4 py-3 box-border" th:value="${member.phone}">
-<!--                    <input type="text" class="w-1/4 border-2 mx-1 px-4 py-3 box-border" maxlength = '3'> - -->
-<!--                    <input type="text" class="w-1/4 border-2 mx-1 px-4 py-3 box-border" maxlength = '4'> - -->
-<!--                    <input type="text" class="w-1/4 border-2 mx-1 px-4 py-3 box-border" maxlength = '4'>-->
-                </dd>
-            </dl>
-            <dl class="table-row">
-                <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">이메일</dt>
-                    <input type="email" class="w-full border-2 mx-1 px-4 py-3 box-border" th:value="${member.email}">
-
-                <!--                <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">-->
-<!--                    <input type="text" class="w-1/3 border-2 mx-1 px-4 py-3 box-border"> @-->
-<!--                    <select name="email" class="w-1/3 border-2 mx-1 px-4 py-3 box-border">-->
-<!--                        <option value="naver">naver.com</option>-->
-<!--                        <option value="naver">daum.net</option>-->
-<!--                        <option value="naver">hotmail.com</option>-->
-<!--                        <option value="naver">nate.com</option>-->
-<!--                        <option value="naver">gmail.com</option>-->
-<!--                    </select>-->
-<!--                </dd>-->
-            </dl>
-        </div>
-    </div>
-    <!-- 주문자 정보 끝 -->
-
-    <!--배송지 정보 시작-->
-    <div class="box-border">
-        <h2 class="mt-10 box-border border-b-2 border-black text-xl">배송지 정보</h2>
-        <div class="mb-10 table w-full border-b border-black">
-            <dl class="table-row">
-                <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">배송지 선택</dt>
-                <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                    <input type="radio" id="basic" name="address" onclick="fetchBasicAddress()">
-                    <label for="basic" class="inline-block mr-4">기본 배송지</label>
-                    <input type="radio" id="new" name="address" onclick="clearAddress()">
-                    <label for="new" class="inline-block">새로운 배송지</label>
-                    <a href="#" id="addressModalToggle" class="px-3 inline-block border border-black address">나의 배송 주소록</a>
-                    <!-- 모달 -->
-                    <div id="addressModal" class="modal">
-                        <div class="modal-content">
-                            <span class="close" onclick="closeModal()">&times;</span>
-                            <h2>내 배송지 목록</h2>
-                            <table>
-                                <thead>
-                                <tr>
-                                    <th>선택</th>
-                                    <th>배송지 이름</th>
-                                    <th>주소</th>
-                                    <th>수령인</th>
-                                    <th>전화번호</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr th:each="address : ${mad}">
-                                    <td><input type="radio" name="selectAddress" onclick="getAddressDetails()" th:value="${address.maseq}"></td>
-                                    <td th:text="${address.title}">내 배송지</td>
-                                    <td th:text="${address.address.city}">서울시 강남구</td>
-                                    <td th:text="${address.address.name}">홍길동</td>
-                                    <td th:text="${address.address.phone}">010-1234-5678</td>
-                                </tr>
-                                </tbody>
-                            </table>
+        <!--배송지 정보 시작-->
+        <div class="box-border">
+            <h2 class="mt-10 box-border border-b-2 border-black text-xl">배송지 정보</h2>
+            <div class="mb-10 table w-full border-b border-black">
+                <dl class="table-row">
+                    <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">배송지 선택</dt>
+                    <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
+                        <input type="radio" id="basic" name="address" onclick="fetchBasicAddress()">
+                        <label for="basic" class="inline-block mr-4">기본 배송지</label>
+                        <input type="radio" id="new" name="address" onclick="clearAddress()">
+                        <label for="new" class="inline-block">새로운 배송지</label>
+                        <a href="#" id="addressModalToggle" class="px-3 inline-block border border-black address">나의 배송 주소록</a>
+                        <!-- 모달 -->
+                        <div id="addressModal" class="modal">
+                            <div class="modal-content">
+                                <span class="close" onclick="closeModal()">&times;</span>
+                                <h2>내 배송지 목록</h2>
+                                <table>
+                                    <thead>
+                                    <tr>
+                                        <th>선택</th>
+                                        <th>배송지 이름</th>
+                                        <th>주소</th>
+                                        <th>수령인</th>
+                                        <th>전화번호</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="address : ${mad}">
+                                        <td><input type="radio" name="selectAddress" onclick="getAddressDetails()" th:value="${address.maseq}"></td>
+                                        <td th:text="${address.title}">내 배송지</td>
+                                        <td th:text="${address.address.city}">서울시 강남구</td>
+                                        <td th:text="${address.address.name}">홍길동</td>
+                                        <td th:text="${address.address.phone}">010-1234-5678</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
-                    </div>
 
-                </dd>
-            </dl>
-            <dl class="table-row">
-                <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">수령자</dt>
-                <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                    <input type="text" id="addressName" class="w-full border-2 mx-1 px-4 py-3 box-border">
-                </dd>
-            </dl>
-            <dl class="table-row">
-                <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">휴대폰</dt>
-                <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                    <input type="text" id="addressPhone" class="w-full border-2 mx-1 px-4 py-3 box-border">
-                </dd>
-            </dl>
-            <dl class="table-row">
-                <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">배송주소</dt>
-                <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                    <input class="w-1/3 px-4 py-3 border-2 mx-1 mb-1" type="text" id="zipcode" placeholder="우편번호" readonly>
-                    <input type="button" onclick="execDaumPostcode()" class="border-2 findZipcode" value="우편번호 찾기" />
-                    <input class="w-full px-4 py-3 mx-1 border-2 mb-1" type="text" id="address" placeholder="주소" readonly>
-                    <input class="w-1/3 px-4 py-3 mx-1 border-2" type="text" id="detailAddress" placeholder="상세주소">
-                    <input class="w-1/3 px-4 py-3 mx-1 border-2" type="hidden" id="extraAddress" placeholder="참고">
-                </dd>
-            </dl>
+                    </dd>
+                </dl>
+                <dl class="table-row">
+                    <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">수령자</dt>
+                    <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
+                        <input type="text" id="addressName" class="w-full border-2 mx-1 px-4 py-3 box-border">
+                    </dd>
+                </dl>
+                <dl class="table-row">
+                    <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">휴대폰</dt>
+                    <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
+                        <input type="text" id="addressPhone" class="w-full border-2 mx-1 px-4 py-3 box-border">
+                    </dd>
+                </dl>
+                <dl class="table-row">
+                    <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">배송주소</dt>
+                    <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
+                        <input class="w-1/3 px-4 py-3 border-2 mx-1 mb-1" type="text" id="zipcode" placeholder="우편번호" readonly>
+                        <input type="button" onclick="execDaumPostcode()" class="border-2 findZipcode" value="우편번호 찾기" />
+                        <input class="w-full px-4 py-3 mx-1 border-2 mb-1" type="text" id="address" placeholder="주소" readonly>
+                        <input class="w-1/3 px-4 py-3 mx-1 border-2" type="text" id="detailAddress" placeholder="상세주소">
+                        <input class="w-1/3 px-4 py-3 mx-1 border-2" type="hidden" id="extraAddress" placeholder="참고">
+                    </dd>
+                </dl>
+            </div>
         </div>
-    </div>
-    <!--배송지 정보 끝-->
+        <!--배송지 정보 끝-->
 
 
-    <!--최종 결제 시작-->
-    <div class="box-border">
-        <h2 class="mt-10 box-border border-b-2 border-black text-xl">최종 결제 금액</h2>
-        <div class="mb-10 table w-full border-b border-black">
-            <dl class="px-2 overflow-hidden mb-15">
-                <dt class="font-bold float-left w-1/2 px-2 py-3">총 상품금액</dt>
-                <dd class="float-left text-right w-1/2 px-2 py-3 total-price">39,500원</dd>
-                <dt class="font-bold float-left w-1/2 px-2 py-3">배송비</dt>
-                <dd class="float-left text-right w-1/2 px-2 py-3">0원</dd>
-                <dt class="text-3xl font-bold float-left w-1/2 px-2 py-3">총 결제예상 금액</dt>
-                <dd class="text-3xl font-bold text-yellow-400 float-left text-right w-1/2 px-2 py-3 total-price">39,500원</dd>
-            </dl>
+        <!--최종 결제 시작-->
+        <div class="box-border">
+            <h2 class="mt-10 box-border border-b-2 border-black text-xl">최종 결제 금액</h2>
+            <div class="mb-10 table w-full border-b border-black">
+                <dl class="px-2 overflow-hidden mb-15">
+                    <dt class="font-bold float-left w-1/2 px-2 py-3">총 상품금액</dt>
+                    <dd class="float-left text-right w-1/2 px-2 py-3 total-price">39,500원</dd>
+                    <dt class="font-bold float-left w-1/2 px-2 py-3">배송비</dt>
+                    <dd class="float-left text-right w-1/2 px-2 py-3">0원</dd>
+                    <dt class="text-3xl font-bold float-left w-1/2 px-2 py-3">총 결제예상 금액</dt>
+                    <dd class="text-3xl font-bold text-yellow-400 float-left text-right w-1/2 px-2 py-3 total-price">39,500원</dd>
+                </dl>
+            </div>
         </div>
+        <!--최종 결제 끝-->
+
+        <div class="my-20 box-border text-center">
+            <a href="/order" class="cursor-pointer bg-black text-white px-10 py-3 text-xl box-border">주문하기</a>
+        </div>
+
     </div>
-    <!--최종 결제 끝-->
-
-    <div class="my-20 box-border text-center">
-        <a href="/order" class="cursor-pointer bg-black text-white px-10 py-3 text-xl box-border">주문하기</a>
-    </div>
-
-</div>
-
+</form>
 <!-- footer section -->
 <div th:replace="fragments/footer :: footerFragment"></div>
 <!-- footer section -->
