--- a/src/main/resources/templates/Item/itemBuy.html
+++ b/src/main/resources/templates/Item/itemBuy.html
@@ -116,15 +116,15 @@
                     </dd>
                 </dl>
                 <dl class="table-row">
-                    <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">수령자</dt>
+                    <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">수령인</dt>
                     <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                        <input type="text" id="addressName" class="w-full border-2 mx-1 px-4 py-3 box-border">
+                        <input type="text" id="addressName" placeholder="수령인" class="w-full border-2 mx-1 px-4 py-3 box-border">
                     </dd>
                 </dl>
                 <dl class="table-row">
-                    <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">휴대폰</dt>
+                    <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">전화번호</dt>
                     <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                        <input type="text" id="addressPhone" class="w-full border-2 mx-1 px-4 py-3 box-border">
+                        <input type="text" id="addressPhone" placeholder="전화번호" class="w-full border-2 mx-1 px-4 py-3 box-border">
                     </dd>
                 </dl>
                 <dl class="table-row">
