--- a/src/main/resources/templates/Item/itemBuy.html
+++ b/src/main/resources/templates/Item/itemBuy.html
@@ -31,7 +31,7 @@
                         <dt class="pb-4 table-cell text-center">수량</dt>
                         <dt class="pb-4 table-cell text-center">주문 금액</dt>
                     </dl>
-                    <dl class="table-row overflow-visible" th:each="item : ${orderItemsForms}">
+                    <dl class="table-row overflow-visible" th:each="item,iterStat : ${orderItemsForms}">
                         <dd class="table-cell p-3 border-t border-b myTitle">
                             <img th:with="fileName=${#strings.substringAfter(item.item.img, '_')}" th:src="@{'/images/' + ${fileName}}" class="product_img" />
                         </dd>
@@ -39,6 +39,8 @@
                         </dd>
                         <dd class="table-cell p-3 align-middle border-t border-b myTitle" th:text="${item.count + ' 개'}"></dd>
                         <dd th:text="${#numbers.formatInteger(item.item.price, 0, 'COMMA') + ' 원'}" class="table-cell p-3 align-middle border-t border-b myTitle">원</dd>
+                        <input type="hidden" th:name="'forms[' + ${iterStat.index} + '].iseq'" th:value="${item.item.iseq}" />
+                        <input type="hidden" th:name="'forms[' + ${iterStat.index} + '].count'" th:value="${item.count}" />
                     </dl>
                 </div>
 
@@ -118,22 +120,22 @@
                 <dl class="table-row">
                     <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">수령인</dt>
                     <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                        <input type="text" id="addressName" placeholder="수령인" class="w-full border-2 mx-1 px-4 py-3 box-border">
+                        <input type="text" id="addressName" name="name" placeholder="수령인" class="w-full border-2 mx-1 px-4 py-3 box-border">
                     </dd>
                 </dl>
                 <dl class="table-row">
                     <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">전화번호</dt>
                     <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                        <input type="text" id="addressPhone" placeholder="전화번호" class="w-full border-2 mx-1 px-4 py-3 box-border">
+                        <input type="text" id="addressPhone" name="phone" placeholder="전화번호" class="w-full border-2 mx-1 px-4 py-3 box-border">
                     </dd>
                 </dl>
                 <dl class="table-row">
                     <dt class="table-cell w-1/5 font-bold align-middle p-1 border-b border-gray-300">배송주소</dt>
                     <dd class="w-4/5 table-cell p-1 align-middle border-b border-gray-300">
-                        <input class="w-1/3 px-4 py-3 border-2 mx-1 mb-1" type="text" id="zipcode" placeholder="우편번호" readonly>
+                        <input class="w-1/3 px-4 py-3 border-2 mx-1 mb-1" type="text" name="zipCode" id="zipcode" placeholder="우편번호" readonly>
                         <input type="button" onclick="execDaumPostcode()" class="border-2 findZipcode" value="우편번호 찾기" />
-                        <input class="w-full px-4 py-3 mx-1 border-2 mb-1" type="text" id="address" placeholder="주소" readonly>
-                        <input class="w-1/3 px-4 py-3 mx-1 border-2" type="text" id="detailAddress" placeholder="상세주소">
+                        <input class="w-full px-4 py-3 mx-1 border-2 mb-1" type="text" name="city" id="address" placeholder="주소" readonly>
+                        <input class="w-1/3 px-4 py-3 mx-1 border-2" type="text" name="street" id="detailAddress" placeholder="상세주소">
                         <input class="w-1/3 px-4 py-3 mx-1 border-2" type="hidden" id="extraAddress" placeholder="참고">
                     </dd>
                 </dl>
@@ -153,13 +155,14 @@
                     <dd class="float-left text-right w-1/2 px-2 py-3">0원</dd>
                     <dt class="text-3xl font-bold float-left w-1/2 px-2 py-3">총 결제예상 금액</dt>
                     <dd class="text-3xl font-bold text-yellow-400 float-left text-right w-1/2 px-2 py-3 total-price">39,500원</dd>
+                    <input type="hidden" name="totalPrice" id="totalPrice" value="39,500원">
                 </dl>
             </div>
         </div>
         <!--최종 결제 끝-->
 
         <div class="my-20 box-border text-center">
-            <a href="/order" class="cursor-pointer bg-black text-white px-10 py-3 text-xl box-border">주문하기</a>
+            <button type="submit" class="cursor-pointer bg-black text-white px-10 py-3 text-xl box-border">주문하기</button>
         </div>
 
     </div>
