--- a/src/main/resources/templates/ask.html
+++ b/src/main/resources/templates/ask.html
@@ -22,7 +22,7 @@
           <h2> 문의하기 </h2>
         </div>
         <div class="form_container">
-          <form action="ask" method="post" th:object="${ask}">
+          <form action="/shopping/ask" method="post" th:object="${ask}">
 <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
             <div>
               <input type="text" th:field="*{title}" class="form-control ask_title" placeholder="제목" />
