재고보다 많이 담을 경우 오류 발생 : 장바구니, 구매페이지 전

--- a/src/main/resources/templates/Item/item_detail.html
+++ b/src/main/resources/templates/Item/item_detail.html
@@ -90,5 +90,14 @@
     document.getElementById("addToCartForm").submit(); // 폼 제출
   }
 </script>
+<script th:inline="javascript">
+
+  $(document).ready(function(){
+    var errorMessage = [[${errorMessage}]];
+    if(errorMessage != null){
+      alert(errorMessage);
+    }
+  });
+</script>
 </body>
 </html>
