--- a/src/main/resources/templates/my/cart.html
+++ b/src/main/resources/templates/my/cart.html
@@ -68,6 +68,15 @@
     });
   }
 </script>
+<script th:inline="javascript">
+
+  $(document).ready(function(){
+    var errorMessage = [[${errorMessage}]];
+    if(errorMessage != null){
+      alert(errorMessage);
+    }
+  });
+</script>
 
 
 </body>
