main 페이지에 이미지 로드, 블러처리

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -743,3 +743,9 @@ a:focus {
 .footer_section .footer-info p a {
     color: inherit;
 }
+
+.main-image {
+    background-color: black;
+    filter: blur(1px);
+    outline: none;
+}
