--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,8 +7,8 @@
 <div th:replace="fragments/header :: headerFragment"></div>
   <div th:include="fragments/nav.html"></div>
   <div class="hero_area">
-    <div class="bg-box">
-      <img src="images/hero-bg.jpg" alt="">
+    <div class="bg-box main-image">
+      <img th:src="@{'/images/' + ${fileName}}" />
     </div>
     <!-- slider section -->
     <section class="slider_section ">
@@ -108,10 +108,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
   <!-- custom js -->
   <script src="/js/custom.js"></script>
-  <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
-  </script>
-  <!-- End Google Map -->
+
 
 </body>
 </html>
