컨트롤러에서 발생한 예외처리 후 이 전 페이지로 이동

--- a/src/main/resources/templates/Item/item.html
+++ b/src/main/resources/templates/Item/item.html
@@ -110,6 +110,16 @@
   </script>
   <!-- End Google Map -->
 
+
+<script th:inline="javascript">
+
+  $(document).ready(function(){
+    var errorMessage = [[${errorMessage}]];
+    if(errorMessage != null){
+      alert(errorMessage);
+    }
+  });
+</script>
 </body>
 
 </html>
