색상 검색(ajax 요청)

--- a/src/main/resources/templates/Item/item.html
+++ b/src/main/resources/templates/Item/item.html
@@ -24,23 +24,24 @@
       <!-- 카테고리, 검색 -->
       <div class="row">
         <div class="col-1">
-          <label for="employ">C o l o r</label>
+          <label for="itemColor">C o l o r</label>
         </div>
         <div class="col-4">
-          <select name="employ" id="employ" class="category">
+          <select name="itemColor" id="itemColor" class="category">
             <option value="">컬러 선택</option>
             <th:block th:each="color : ${itemColors}">
               <option th:value="${color}" th:text="${color.getName()}"></option>
             </th:block>
           </select>
         </div>
+
         <div class="search">
           <form th:action="@{/shopping/search}" method="get">
             <input type="text" name="keyword" placeholder="검색어 입력">
             <button type="submit">
               <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png">
             </button>
-            <input type="hidden" name="category" th:value="${category}">
+            <input type="hidden" id="category" name="category" th:value="${category}">
           </form>
         </div>
       </div>
@@ -115,7 +116,7 @@
   </script>
   <!-- End Google Map -->
 
-
+<script src="/js/itemCategory.js"></script>
 <script th:inline="javascript">
 
   $(document).ready(function(){
