--- a/src/main/resources/templates/my/orderDetail.html
+++ b/src/main/resources/templates/my/orderDetail.html
@@ -98,7 +98,7 @@
         </div>
         <!--배송지 정보 끝-->
         <div class="text-center">
-            <a href="#" class="orderRollback">주문 목록으로 돌아가기</a>
+            <a href="/member/o_l" class="orderRollback">주문 목록으로 돌아가기</a>
         </div><br>
     </div>
 </form>
