회원 별 장바구니에 담긴 상품 갯수 출력

--- a/src/main/resources/templates/my/mypage.html
+++ b/src/main/resources/templates/my/mypage.html
@@ -26,7 +26,7 @@
 
       <a href="#" class="item">
         <div>
-          <div class="green number">6</div>
+          <div class="green number" th:text="${cartCount}">6</div>
           <div class="text">장바구니</div>
         </div>
         <div class="icon"> > </div>
